# DineBot_Bengaluru

./: ARCHITECTURE.md  RUN.md  requirements.txt  run_streamlit.sh  start_app.sh  streamlit_app.py
App/: README.md
App/backend/: main.py
App/frontend/: .env.example  index.html  package.json
App/frontend/src/: App.css  App.jsx  index.css
App/tests/: test_recommend_filtering.py
Integration/: README.md  pyproject.toml
Integration/tests/: conftest.py  test_cross_phase_integration.py
Phase1/: pyproject.toml
Phase1/src/ai_restaurant/: api.py  config.py  contracts.py
Phase1/tests/: test_phase1_api_boundary.py  test_phase1_contracts.py
Phase2/: pyproject.toml
Phase2/src/ai_restaurant_phase2/: config.py  data_loader.py  schema.py
Phase2/tests/: test_phase2_data_loader.py  test_phase2_schema.py
Phase3/: pyproject.toml
Phase3/src/ai_restaurant_phase3/: filtering.py  models.py
Phase3/tests/: test_phase3_filtering.py
Phase4/: README.md  pyproject.toml
Phase4/src/ai_restaurant_phase4/: groq_client.py  orchestrator.py  prompting.py
Phase4/tests/: test_phase4_groq_integration.py
Phase5/: pyproject.toml
Phase5/tests/: test_phase5_formatter.py
Phase6/: pyproject.toml
Phase6/tests/: test_phase6_error_handling.py  test_phase6_logging.py  test_phase6_metrics.py  test_phase6_tracing.py
Phase7/: README.md  app.py  pyproject.toml
Phase7/.streamlit/: config.toml
Phase7/src/phase7_ui/: __init__.py  client.py  config.py  demo.py  models.py
Phase7/tests/: test_phase7_client.py  test_phase7_config.py  test_phase7_models.py
scripts/: seed_hf_cache.py
(+8 files in other folders)
